--- a/EcologyClub/css/index.html
+++ b/EcologyClub/css/index.html
@@ -115,13 +115,13 @@ DESIGNED & DEVELOPED by FREEHTML5.CO
 					<div class="row">
 						<div class="col-md-12">
 							<div class="owl-carousel owl-carousel-fullwidth">
-						    <div class="item"><img src="images/EcologyClub2.PNG" height= 400px width= 400px alt="image"></div>
-						    <div class="item"><img src="images/EcologyClub6.JPG" height= 400px width= 400px alt="image"></div>
-						    <div class="item"><img src="images/EcologyClub7.jpg" height= 400px width= 250px alt="image"></div>
-						    <div class="item"><img src="images/EcologyClub8.jpg"  height= 400px width= 400px alt="image"></div>
-								<div class="item"><img src="images/EcologyClub9.jpg" height= 400px width= 400px alt="image"></div>
-								<div class="item"><img src="images/EcologyClub10.jpg" height= 400px width= 400px alt="image"></div>
-								<div class="item"><img src="images/EcologyClub1.jpg" height= 400px width= 400px alt="image"></div>
+						    <div class="item"><img src="images/EcologyClub2.PNG" alt="image"></div>
+						    <div class="item"><img src="images/EcologyClub6.JPG" alt="image"></div>
+						    <div class="item"><img src="images/EcologyClub7.jpg" alt="image"></div>
+						    <div class="item"><img src="images/EcologyClub8.jpg" alt="image"></div>
+								<div class="item"><img src="images/EcologyClub9.jpg" alt="image"></div>
+								<div class="item"><img src="images/EcologyClub10.jpg" alt="image"></div>
+								<div class="item"><img src="images/EcologyClub1.jpg" alt="image"></div>
 							</div>
 						</div>
 					</div>
@@ -277,8 +277,8 @@ DESIGNED & DEVELOPED by FREEHTML5.CO
 										-->
 									</div>
 								</div>
-								Press Item
-							</div>-->
+								<!-- Press Item -->
+							</div>
 
 							<div class="col-md-6">
 								<!-- Press Item -->
