--- a/EcologyClub/index.html
+++ b/EcologyClub/index.html
@@ -117,11 +117,11 @@ DESIGNED & DEVELOPED by FREEHTML5.CO
 							<div class="owl-carousel owl-carousel-fullwidth">
 						    <div class="item"><img src="images/EcologyClub2.PNG" height= 400px width= 400px alt="image"></div>
 						    <div class="item"><img src="images/EcologyClub6.JPG" height= 400px width= 400px alt="image"></div>
-						    <div class="item"><img src="images/EcologyClub7.jpg" height= 400px width= 250px alt="image"></div>
-						    <div class="item"><img src="images/EcologyClub8.jpg"  height= 400px width= 400px alt="image"></div>
-								<div class="item"><img src="images/EcologyClub9.jpg" height= 400px width= 400px alt="image"></div>
-								<div class="item"><img src="images/EcologyClub10.jpg" height= 400px width= 400px alt="image"></div>
-								<div class="item"><img src="images/EcologyClub1.jpg" height= 400px width= 400px alt="image"></div>
+						    <div class="item"><img src="images/EcologyClub7.JPG" height= 400px width= 250px alt="image"></div>
+						    <div class="item"><img src="images/EcologyClub8.JPG"  height= 400px width= 400px alt="image"></div>
+								<div class="item"><img src="images/EcologyClub9.JPG" height= 400px width= 400px alt="image"></div>
+								<div class="item"><img src="images/EcologyClub10.JPG" height= 400px width= 400px alt="image"></div>
+								<div class="item"><img src="images/EcologyClub1.JPG" height= 400px width= 400px alt="image"></div>
 							</div>
 						</div>
 					</div>
