--- a/EcologyClub/index.html
+++ b/EcologyClub/index.html
@@ -252,64 +252,72 @@ DESIGNED & DEVELOPED by FREEHTML5.CO
 
 							<div class="col-md-6">
 								<!-- Press Item -->
+								<!--
 								<div class="fh5co-press-item">
 									<div class="fh5co-press-img" style="background-image: url(images/slide_2.jpg)">
 									</div>
 									<div class="fh5co-press-text">
-										<!--
+
 										<h3 class="h2 fh5co-press-title">Simplicity <span class="fh5co-border"></span></h3>
 										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis eius quos similique suscipit dolorem cumque vitae qui molestias illo accusantium...</p>
-										-->
+
 									</div>
 								</div>
+								-->
 								<!-- Press Item -->
 							</div>
 
 							<div class="col-md-6">
 								<!-- Press Item -->
+								<!--
 								<div class="fh5co-press-item">
 									<div class="fh5co-press-img" style="background-image: url(images/slide_1.jpg)">
 									</div>
 									<div class="fh5co-press-text">
-										<!--
+
 										<h3 class="h2 fh5co-press-title">Versatile <span class="fh5co-border"></span></h3>
 										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis eius quos similique suscipit dolorem cumque vitae qui molestias illo accusantium...</p>
-										-->
+
 									</div>
 								</div>
-								Press Item
-							</div>-->
+								-->
+								<!--Press Item-->
+							</div>
 
 							<div class="col-md-6">
 								<!-- Press Item -->
 								<div class="fh5co-press-item">
+									<!--
 									<div class="fh5co-press-img" style="background-image: url(images/slide_3.jpg);">
 									</div>
 									<div class="fh5co-press-text">
-										<!--
+
 										<h3 class="h2 fh5co-press-title">Aesthetic <span class="fh5co-border"></span></h3>
 										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis eius quos similique suscipit dolorem cumque vitae qui molestias illo accusantium...</p>
-										-->
+
 									</div>
 								</div>
+								-->
 								<!-- Press Item -->
 							</div>
 
 							<div class="col-md-6">
 								<!-- Press Item -->
 								<div class="fh5co-press-item">
+									<!--
 									<div class="fh5co-press-img" style="background-image: url(images/slide_4.jpg);">
 									</div>
 									<div class="fh5co-press-text">
-										<!--
+
 										<h3 class="h2 fh5co-press-title"><span class="fh5co-border"></span></h3>
 										<p></p>
-										-->
+
 									</div>
 								</div>
+								-->
 								<!-- Press Item -->
 							</div>
-
+							<!--
 						</div>
 						<div class="fh5co-spacer fh5co-spacer-xs"></div>
 						<div class="row">
@@ -317,7 +325,7 @@ DESIGNED & DEVELOPED by FREEHTML5.CO
 								<a href="#" class="btn btn-outline btn-md btn-block">View All Press Releases</a>
 							</div>
 						</div>
-
+					-->
 
 
 					</div>
